--- a/05-EfeitosNoDom/modules-intro/css/global.css
+++ b/05-EfeitosNoDom/modules-intro/css/global.css
@@ -292,3 +292,10 @@ dt:hover{
     margin-left: 20px;
     box-shadow: inset 0 0 2em #00FF1E, 0 0 4px 4px #81FF90;
 }
+.btc-preco{
+    background: #3f4;
+    padding: .2rem .5rem;
+    font-weight: bold;
+    border-radius: 2px;
+    
+}
