--- a/08-Final-Animais-Fantasticos/css/menu-mobile.css
+++ b/08-Final-Animais-Fantasticos/css/menu-mobile.css
@@ -7,8 +7,7 @@
         display: flex;
         background: #222;
         border: none;
-        padding: 0.8rem 2rem;
-        font-size: 1.5em;
+        padding: .5rem 1rem;
         border-radius: 4px;
         text-transform: uppercase;
         font-family: "IBM Plex Mono", monospace;
